# beman-local-ci

./: LICENSE  README.md  TESTING.md  pyproject.toml
beman_local_ci/: __init__.py  cli.py
beman_local_ci/lib/: __init__.py  config.py  docker.py  filter.py  matrix.py  runner.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_docker.py  test_filter.py  test_matrix.py
